# WebChat

./: .gitignore
Backend/: .env  main.py  pyproject.toml  requirements.txt
Backend/app/api/: api.py  deps.py
Backend/app/api/endpoints/: auth.py  auth.py.bak  chats.py  uploads.py  users.py
Backend/app/core/: __init__.py  config.py  database.py  security.py
Backend/app/models/: __init__.py  attachment.py  base.py  conversation.py  message.py  message_reaction.py  user.py  user_block.py
Backend/app/schemas/: __init__.py  conversation.py  message.py  user.py
Backend/app/services/: chat_service.py  websocket.py
DataBase/: init_db.sh
Frontend/: package-lock.json  package.json
Frontend/src/: App.tsx  index.css
Frontend/src/components/: ProtectedRoute.tsx  PublicRoute.tsx
Frontend/src/components/auth/: ChangePasswordModal.tsx
Frontend/src/components/chat/: AddMemberModal.tsx  BlockUserModal.tsx  ChatArea.tsx  ChatHeader.tsx  ChatInput.tsx  ChatSidebar.tsx  CreateGroupModal.tsx  DragDropOverlay.tsx  EmptyState.tsx  FilePreview.tsx  GroupInfoModal.tsx  MessageBubble.tsx  MessageList.tsx  SearchBar.tsx  SidebarItem.tsx  UserMenu.tsx
Frontend/src/components/ui/: ConfirmModal.tsx  index.tsx
Frontend/src/contexts/: AuthContext.tsx
Frontend/src/hooks/: useChat.ts  useUserSearch.ts
Frontend/src/pages/: Home.tsx  Login.tsx  Register.tsx
Frontend/src/services/: api.ts  authService.ts  chatService.ts  userService.ts  websocketService.ts
Frontend/src/types/: index.ts
Frontend/src/utils/: encryption.ts
